# control

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .mergify.yml  Architecture.md  CHANGELOG.md  Cargo.toml  Communication&API.md  EL7037_debug_log.md  EL7037_documentation.md  Extending.md  Frontend.md  Getting_Started.md  Hardware&EtherCAT.md  Home.md  Identification.md  Logging.md  Other_transports.md  Performance.md  README.md  Wago_Winder.txt  ]  cargo_run_linux.sh  compile_metrics.sh  compile_nix_pkgs.sh  control.code-workspace  credentials.sh  docker-nix.sh  flake.nix  generate-installinfo.sh  nixos-build-installer.sh  nixos-build-iso.sh  nixos-install.sh  nixos-setup.sh  package-lock.json  package.json  run_extruder_mock.sh  runtime_metrics.csv  server.log~  (+4 more)
control-core/: Cargo.toml
control-core/src/: downcast.rs  futures.rs  irq_handling.rs  lib.rs  realtime.rs  state_path.rs
control-core/src/actors/: analog_function_generator.rs  analog_input_getter.rs  digital_input_getter.rs  digital_input_logger.rs  digital_output_blinker.rs  digital_output_blinkers.rs  digital_output_setter.rs  mitsubishi_inverter_rs485.rs  mod.rs  serial_interface_actor.rs  stepper_driver.rs  stepper_driver_max_speed.rs  stepper_driver_pulse_train.rs  temperature_input_getter.rs  temperature_input_logger.rs
control-core/src/controllers/: clamping_timeagnostic_pid.rs  deadtime_p_controller.rs  deadtime_pi_controller.rs  linear_acceleration.rs  mod.rs  pid.rs  pid_autotuner.rs  timeagnostic_pid.rs
control-core/src/converters/: angle_converter.rs  angular_step_converter.rs  circular_converter.rs  linear_step_converter.rs  mod.rs  motor_converter.rs  step_converter.rs  transmission_converter.rs
control-core/src/ethercat/: eeprom_identification.rs  interface_discovery.rs  mod.rs
control-core/src/ethernet/: ethercat_interface_discovery.rs  mod.rs  modbus_tcp_discovery.rs
control-core/src/helpers/: compare_lists.rs  hasher_serializer.rs  hashing.rs  interpolation.rs  loop_trottle.rs  mod.rs  moving_time_window.rs  retry.rs
control-core/src/identification/: mod.rs
control-core/src/machines/: api.rs  connection.rs  identification.rs  manager.rs  manager_iter.rs  mod.rs  new.rs  registry.rs
control-core/src/modbus/: mod.rs  modbus_serial_interface.rs  tcp.rs
control-core/src/rest/: mutation.rs
control-core/src/serial/: mod.rs  panic.rs  registry.rs  serial_detection.rs
control-core/src/socketio/: event.rs  mod.rs  namespace.rs  namespace_id.rs  room.rs  room_id.rs  socket_queue.rs
control-core/src/transmission/: fixed.rs  mod.rs
control-core/src/uom_extensions/: acceleration.rs  angular_acceleration.rs  angular_jerk.rs  jerk.rs  mod.rs  rpm.rs  velocity.rs
control-core/src/video_streaming/: mod.rs
control-core/src/xtrem/: device_manager.rs  mod.rs
control-core/src/xtrem_protocol/: mod.rs  xtrem_serial_interface.rs
control-hub/: Cargo.toml  build.rs  default_config.yaml
control-hub/src/: exporter.rs  lib.rs  main.rs  rest_api.rs
control-hub/src/api/: machine.rs  machines.rs  mod.rs  property.rs  types.rs  utils.rs
control-hub/src/bridge/: embedded.rs  local.rs  mod.rs  remote.rs  unix.rs
control-hub/src/rest_api/: mod.rs
docs/: coe.md  (+26 more)
ethercat-eeprom-dump/: Cargo.toml
ethercat-eeprom-dump/src/: cli.rs  dump.rs  ls.rs  main.rs  print.rs  read.rs  restore.rs
ethercat-hal/: Cargo.toml  rustdoc.md
ethercat-hal/src/: coe.rs  lib.rs  signing.rs  types.rs
ethercat-hal/src/actors/: analog_function_generator.rs  analog_input_getter.rs  analog_input_logger.rs  digital_input_logger.rs  digital_output_blinker.rs  digital_output_blinkers.rs  digital_output_setter.rs  mod.rs  stepper_driver.rs  stepper_driver_max_speed.rs  stepper_driver_pulse_train.rs  temperature_input_logger.rs
ethercat-hal/src/debugging/: diagnosis_history.rs  mod.rs
ethercat-hal/src/devices/: ek1100.rs  el1002.rs  el1008.rs  el1124.rs  el2002.rs  el2004.rs  el2008.rs  el2024.rs  el2521.rs  el2522.rs  el2634.rs  el2809.rs  el3001.rs  el3021.rs  el3024.rs  el3062_0030.rs  el3204.rs  el4002.rs  el4008.rs  el5152.rs  el6021.rs  el9505.rs  ip20_ec_di8_do8.rs  mod.rs  wago_730_1506.rs  wago_750_1506.rs  wago_750_354.rs
ethercat-hal/src/helpers/: counter_wrapper_u16_i128.rs  el70xx_velocity_converter.rs  ethercrab_types.rs  mod.rs  signing_converter_u16.rs
ethercat-hal/src/io/: analog_input.rs  analog_input_dummy.rs  analog_output.rs  as006.rs  as008.rs  digital_input.rs  digital_output.rs  encoder_input.rs  mod.rs  pulse_train_output.rs  serial_interface.rs  stepper_jog_wago_750_671.rs  stepper_positioning_wago_750_671.rs  stepper_reference_wago_750_671.rs  stepper_velocity.rs  stepper_velocity_el7031.rs  stepper_velocity_el70x1.rs  stepper_velocity_wago_750_671.rs  stepper_velocity_wago_750_671_traverse.rs  stepper_velocity_wago_750_672.rs  temperature_input.rs  (+3 more)
ethercrab_machines/: Cargo.toml
ethercrab_machines/src/: coe.rs  device.rs  error.rs  lib.rs
machine-core/: Cargo.toml
machine-core/src/: hardware.rs  lib.rs  spec.rs  spec_serde.rs
machine_implementations/: Cargo.toml
machine_implementations/src/: lib.rs  machine_identification.rs  registry.rs  telemetry.rs
machines/: Cargo.toml
machines/src/: lib.rs  live_values.rs  machine_data.rs  machine_identification.rs  registry.rs
property/: Cargo.toml
property/src/: allocator.rs  lib.rs  pool.rs  property.rs  set.rs  view.rs
qitech_control/: Cargo.toml
qitech_control/src/: app_state.rs  database.rs  ethercat.rs  interfaces.rs  machine_loop.rs  main.rs  mock.rs  mock_main.rs  persist.rs
qitech_control_hub/: Cargo.toml
qitech_control_hub/src/: bridge.rs  database_exporter.rs  exporter.rs  lib.rs  main.rs  registry.rs  rest_api.rs  shared_state.rs
server/: Cargo.toml  build.rs  rust-toolchain.toml  rustdoc.md  serial_detecton_loop.drawio  serial_from_the_start.drawio
server/src/: README.md  app_state.rs  gluetex_mock_init.rs  init_tracing.rs  jemalloc_stats.rs  loop.rs  machine_manager.rs  main.rs  mock_init.rs  panic.rs  performance_metrics.rs  process.rs  serial.md
tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+2158 files in other folders)
