[workspace]
members = [
    "qitech_control",
    "control-core",
    "machine_implementations",
#    "utils",
]
exclude = []
resolver = "2"

[workspace.dependencies]
qitech_lib = { git = "https://github.com/qitechgmbh/qitech_lib.git", rev="4036619893c15c0fa63a1c7a5cd38b3d4a63c527" }

[workspace.lints.clippy]
# don't lint poissbilities for let chains because they were introduces after Rust 1.86
collapsible_if = "allow"

# Lint groups (priority -1)
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pendantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
