[package]
name = "control_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"

axum = "0.8.8"

qitech_lib = { path = "../qitech_lib" }
ethercrab = { git = "https://github.com/v-morlock/ethercrab", branch = "main" }
interfaces = "0.0.9"
serde = "1.0.219"
serialport = "4.7.3"
smol = "2.0.2"
socketioxide = "0.18.2"
tokio = { version = "1.50.0", features = ["sync"] }
bitvec = { version = "1.0.1", features = ["alloc"] }
crc = "3.3.0"
tracing = "0.1.44"
erased-serde = "0.4.10"
core_affinity = "0.8.3"
control_core_derive = { version = "0.1.0", path = "../control-core-derive" }


[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

[dev-dependencies]
approx = "0.5.1"
textplots = "0.8"

[features]
default = []

[package.metadata.cargo-machete]
ignored =  ["axum","bitvec","control_core_derive"]
