[package]
name = "ethercat-eeprom-dump"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ethercrab = { git = "https://github.com/ethercrab-rs/ethercrab", branch = "main", features = ["xdp"] }
interfaces = "0.0.9"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
ethercat_hal = { path = "../ethercat-hal" }
control_core = { path = "../control-core" }
futures = "0.3.31"
anyhow = "1.0.100"


[package.metadata.cargo-machete]
ignored = ["interfaces"]
