[workspace]

[package]
name = "machine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1.0.102"
heapless = { version = "0.9.3" }
uom = { version = "0.37.0", default-features = false, features = [ "f64" ] }

qitech_lib = { git = "https://github.com/qitechgmbh/qitech_lib.git", rev  = "1058e40d9d63c234e55510aefe35b54938bf0a41" }

[features]
default = []

serde = [
    "dep:serde",
    "heapless/serde",
]