[package]
name = "machine_implementations"
version = "0.1.0"
edition = "2024"

[dependencies]
qitech_lib = { workspace = true }
control_core = { path = "../control-core" }
control_core_derive = { path = "../control-core-derive" }

serde = "1.0.217"
anyhow = "1.0.102"
bitvec = "1.0.1"
lazy_static = "1.5.0"
euclid = "0.22.13"

tokio = { version = "1.50.0", features = ["sync"] }

# web
serde_json = "1.0.149"
#tracing
tracing = { version = "0.1.44", features = ["attributes"] }
tonic = { version = "0.13.1", optional = true }

# Open Telemetry Related dependencies
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["trace", "metrics", "logs"] }
opentelemetry-appender-tracing = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }

crossbeam="0.8.4"
heapless="0.9.3"
clickhouse="0.15.1"
uom = { version = "0.37.0", default-features = false, features = [ "f64" ] }

[dev-dependencies]
approx = "0.5.1"

[features]
default = ["tracing-fmt"]
never_type = []
tracing-fmt = []
mock-machine = []
memory-locking = []
io-uring = []
development-build = []

[package.metadata.cargo-machete]
ignored =  ["tonic"]
