[package]
name = "machines"
version = "0.1.0"
edition = "2024"

[dependencies]
ethercrab = "0.6"
ethercat_hal = { path = "../ethercat-hal" }
control_core = { path = "../control-core" }
control_core_derive = { path = "../control-core-derive" }
units = { path = "../units" }

serde = "1.0.217"
anyhow = "1.0.100"

bitvec = "1.0.1"
lazy_static = "1.5.0"
euclid = "0.22.11"

# concurrency
smol = "2.0.2"

# web
serde_json = "1.0.143"
socketioxide = { version = "0.17.2", features = ["msgpack"] }

# serial
serialport = "4.7.3"

#tracing
tracing = { version = "0.1.44", features = ["attributes"] }
tonic = { version = "0.13.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
textplots = "0.8.7"

[features]
default = ["tracing-fmt"]
never_type = []
tracing-fmt = []
mock-machine = []
memory-locking = []
io-uring = []
development-build = []





[package.metadata.cargo-machete]
ignored =  ["tonic"]
