[package]
name = "property"
version = "0.1.0"
edition = "2024"

[dependencies]
qitech_lib = { workspace = true }
uom = { version = "0.37.0", default-features = false, features = [ "f64" ] }
heapless = { version = "0.9.3" }
serde = { version = "1.0.217", features = ["derive"], optional = true }

[features]
default = []

serde = [
    "dep:serde",
    "heapless/serde",
]

[dev-dependencies]
serde_json = "1.0.149"