[package]
name = "qitech_control"
version = "0.1.0"
edition = "2024"

[dependencies]
# internal deps
qitech_lib = { workspace = true }
machine_implementations = { path = "../machine_implementations" }
control_core = { path = "../control-core" }
property = { path = "../property", features = ["serde"]}

# external deps
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "time","sync"] }
bitvec = "1"
tracing = "0.1.44"
anyhow = "1.0.102"
serde = "1.0.228"
tower-http = {version = "0.6.8" ,features = ["cors","trace"]} 
serde_json = "1.0.149"
socketioxide = { version = "0.15.2", features = ["msgpack"] }
erased-serde = "0.4.10"
axum = { version = "0.8.8", features = ["macros"] }

# property exporting
postcard="1.1.3"

[features]
default = []
mock = ["qitech_lib/mock"]