[workspace]

[package]
name = "control_hub"
version = "0.1.0"
edition = "2024"

[dependencies]
qitech_lib = { git = "https://github.com/qitechgmbh/qitech_lib.git", rev  = "1058e40d9d63c234e55510aefe35b54938bf0a41" }
property = { path = "../property", features = ["serde", "clickhouse"]}

uom = { version = "0.37.0", default-features = false, features = [ "f64" ] }
heapless = { version = "0.9.3" }

serde = { version = "1.0.217", features = ["derive"] }
postcard="1.1.3"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
clickhouse = { version = "0.14.2", features = ["inserter"]}

chrono= { version = "0.4.45", features = ["serde"]}

[features]
default = []