[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"


[dependencies]

# ethercat
ethercrab = "0.6"
ethercat_hal = { path = "../ethercat-hal" }
control_core = { path = "../control-core" }

# concurrency
thread-priority = "1.2.0"

# web
socketioxide = "0.17.0"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
axum = { version = "0.8.4", features = ["macros"] }

# utility
uom = { version = "0.36.0", default-features = false, features = ["f64"]}
serde = "1.0.217"
anyhow = "1.0.98"
serde_json = "1.0.137"
log = "0.4.25"
env_logger = "0.11.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
open = "5.3.2"
bitvec = "1.0.1"
lazy_static = "1.5.0"
smol = "2.0.2"
dhat = { version = "0.3.3", optional = true }


# dre usb
crc = "3.2.1"
serial = "0.4.0"
serialport = "4.7.1"

[dev-dependencies]
approx = "0.5.1"

[features]
never_type = []
dhat-heap = ["dep:dhat"]

[profile.release]
codegen-units = 1
lto = "fat"
