[package]
name = "server"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"


[dependencies]
ethercrab = "0.6"
ethercat_hal = { path = "../ethercat-hal" }
control_core = { path = "../control-core" }
uom = { version = "0.36.0", default-features = false, features = ["f64"] }
serde = "1.0.217"
anyhow = "1.0.98"

open = "5.3.2"
bitvec = "1.0.1"
lazy_static = "1.5.0"
dhat = { version = "0.3.3", optional = true }
euclid = "0.22.11"

# concurrency
smol = "2.0.2"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
thread-priority = "1.2.0"
regex = "1.11.1"
futures = "0.3.31"

# web
serde_json = "1.0.140"
socketioxide = { version = "0.17.1", features = ["msgpack"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }
axum = { version = "0.8.4", features = ["macros"] }

# serial
crc = "3.3.0"
serial = "0.4.0"
serialport = "4.7.1"

#tracing
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-journald = { version = "0.3.1", optional = true }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "chrono",
    "registry",
] }
tracing-opentelemetry = { version = "0.31.0", optional = true }
opentelemetry = { version = "0.30.0", optional = true }
opentelemetry_sdk = { version = "0.30.0", optional = true }
opentelemetry-otlp = { version = "0.30.0", features = [
    "grpc-tonic",
], optional = true }
tonic = { version = "0.13.1", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
tikv-jemalloc-ctl = "0.6"

[dev-dependencies]
approx = "0.5.1"
textplots = "0.8.7"

[features]
default = ["tracing-fmt"]
never_type = []
dhat-heap = ["dep:dhat"]
tracing-fmt = []
tracing-journald = ["dep:tracing-journald"]
tracing-otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:tonic",
]
mock-machine = []

[profile.release]
codegen-units = 1
lto = "fat"
